go-cross-compilation/output/e1-cgo-comparison.txt
=== E1: CGO=0 vs CGO=1 跨平台编译对比 ===

测试环境：
go version go1.26.2 darwin/arm64
OS: Darwin / Arch: arm64

--- 测试 1: 纯 Go HTTP 服务（无 CGO 依赖）---

CGO_ENABLED=0 多平台编译：
go: warning: ignoring go.mod in system temp root /var/folders/2d/ld17ywrs0xl6462s7dcj2dm00000gn/T/tmp.JBolLuGBEI
  linux/amd64: 3.57 MB
go: warning: ignoring go.mod in system temp root /var/folders/2d/ld17ywrs0xl6462s7dcj2dm00000gn/T/tmp.JBolLuGBEI
  linux/arm64: 3.43 MB
go: warning: ignoring go.mod in system temp root /var/folders/2d/ld17ywrs0xl6462s7dcj2dm00000gn/T/tmp.JBolLuGBEI
  darwin/amd64: 3.67 MB
go: warning: ignoring go.mod in system temp root /var/folders/2d/ld17ywrs0xl6462s7dcj2dm00000gn/T/tmp.JBolLuGBEI
  darwin/arm64: 3.43 MB
go: warning: ignoring go.mod in system temp root /var/folders/2d/ld17ywrs0xl6462s7dcj2dm00000gn/T/tmp.JBolLuGBEI
  windows/amd64: 3.72 MB

--- 测试 2: 尝试 CGO=1 交叉编译（预期失败）---

当前平台: darwin/arm64
目标平台: linux/amd64

CGO_ENABLED=1 本地编译（当前平台）：
go: warning: ignoring go.mod in system temp root /var/folders/2d/ld17ywrs0xl6462s7dcj2dm00000gn/T/tmp.JBolLuGBEI
  本地 binary: 3.43 MB

CGO_ENABLED=1 交叉编译到 linux/amd64：
go: warning: ignoring go.mod in system temp root /var/folders/2d/ld17ywrs0xl6462s7dcj2dm00000gn/T/tmp.JBolLuGBEI
# runtime/cgo
gcc_amd64.S:27:8: error: unknown token in expression
 pushq %rbx
       ^
gcc_amd64.S:27:8: error: invalid operand
 pushq %rbx
       ^
gcc_amd64.S:28:8: error: unknown token in expression
 pushq %rbp
       ^
gcc_amd64.S:28:8: error: invalid operand
 pushq %rbp
       ^
gcc_amd64.S:29:8: error: unknown token in expression
 pushq %r12
       ^
gcc_amd64.S:29:8: error: invalid operand
 pushq %r12
       ^
gcc_amd64.S:30:8: error: unknown token in expression
 pushq %r13
       ^
gcc_amd64.S:30:8: error: invalid operand
 pushq %r13
       ^
gcc_amd64.S:31:8: error: unknown token in expression
 pushq %r14
       ^
gcc_amd64.S:31:8: error: invalid operand
 pushq %r14
       ^
gcc_amd64.S:32:8: error: unknown token in expression
 pushq %r15
       ^
gcc_amd64.S:32:8: error: invalid operand
 pushq %r15
       ^
gcc_amd64.S:39:7: error: unknown token in expression
 movq %rdi, %rbx
      ^
gcc_amd64.S:39:7: error: invalid operand
 movq %rdi, %rbx
      ^
gcc_amd64.S:40:7: error: unknown token in expression
 movq %rdx, %rdi
      ^
gcc_amd64.S:40:7: error: invalid operand
 movq %rdx, %rdi
      ^
gcc_amd64.S:41:7: error: invalid token in expression
 call *%rsi
      ^
gcc_amd64.S:41:7: error: invalid operand
 call *%rsi
      ^
gcc_amd64.S:42:7: error: invalid token in expression
 call *%rbx
      ^
gcc_amd64.S:42:7: error: invalid operand
 call *%rbx
      ^
gcc_amd64.S:45:7: error: unknown token in expression
 popq %r15
      ^
gcc_amd64.S:45:7: error: invalid operand
 popq %r15
      ^
gcc_amd64.S:46:7: error: unknown token in expression
 popq %r14
      ^
gcc_amd64.S:46:7: error: invalid operand
 popq %r14
      ^
gcc_amd64.S:47:7: error: unknown token in expression
 popq %r13
      ^
gcc_amd64.S:47:7: error: invalid operand
 popq %r13
      ^
gcc_amd64.S:48:7: error: unknown token in expression
 popq %r12
      ^
gcc_amd64.S:48:7: error: invalid operand
 popq %r12
      ^
gcc_amd64.S:49:7: error: unknown token in expression
 popq %rbp
      ^
gcc_amd64.S:49:7: error: invalid operand
 popq %rbp
      ^
gcc_amd64.S:50:7: error: unknown token in expression
 popq %rbx
      ^
gcc_amd64.S:50:7: error: invalid operand
 popq %rbx
      ^
# runtime/cgo
gcc_clearenv.c:16:2: error: call to undeclared function 'clearenv'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
gcc_clearenv.c:16:2: note: did you mean 'clearerr'?
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/_stdio.h:232:7: note: 'clearerr' declared here
# runtime/cgo
linux_syscall.c:67:13: error: call to undeclared function 'setresgid'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
linux_syscall.c:67:13: note: did you mean 'setregid'?
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/unistd.h:607:6: note: 'setregid' declared here
linux_syscall.c:73:13: error: call to undeclared function 'setresuid'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
linux_syscall.c:73:13: note: did you mean 'setreuid'?
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/unistd.h:609:6: note: 'setreuid' declared here
  ❌ 编译失败：CGO_ENABLED=1 需要目标平台的 C 编译工具链
  这就是 CGO 跨平台编译的核心痛点

--- 测试 3: 编译速度对比 ---

CGO_ENABLED=0 编译时间（本地平台）：
  go: warning: ignoring go.mod in system temp root /var/folders/2d/ld17ywrs0xl6462s7dcj2dm00000gn/T/tmp.JBolLuGBEI
0.201s
CGO_ENABLED=1 编译时间（本地平台）：
  go: warning: ignoring go.mod in system temp root /var/folders/2d/ld17ywrs0xl6462s7dcj2dm00000gn/T/tmp.JBolLuGBEI
0.194s

--- 测试 4: 依赖分析 ---

CGO=0 binary 动态链接依赖：
go: warning: ignoring go.mod in system temp root /var/folders/2d/ld17ywrs0xl6462s7dcj2dm00000gn/T/tmp.JBolLuGBEI
static-binary:
	/usr/lib/libSystem.B.dylib (compatibility version 0.0.0, current version 0.0.0)
	/usr/lib/libresolv.9.dylib (compatibility version 0.0.0, current version 0.0.0)
	/System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation (compatibility version 0.0.0, current version 0.0.0)
	/System/Library/Frameworks/Security.framework/Versions/A/Security (compatibility version 0.0.0, current version 0.0.0)

CGO=1 binary 动态链接依赖：
go: warning: ignoring go.mod in system temp root /var/folders/2d/ld17ywrs0xl6462s7dcj2dm00000gn/T/tmp.JBolLuGBEI
dynamic-binary:
	/usr/lib/libSystem.B.dylib (compatibility version 0.0.0, current version 0.0.0)
	/usr/lib/libresolv.9.dylib (compatibility version 0.0.0, current version 0.0.0)
	/System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation (compatibility version 0.0.0, current version 0.0.0)
	/System/Library/Frameworks/Security.framework/Versions/A/Security (compatibility version 0.0.0, current version 0.0.0)

--- 测试 5: 支持的平台数量 ---

Go 官方支持的 GOOS/GOARCH 组合数：
   47

其中 CGO_ENABLED=0 可直接交叉编译的组合数：全部（47 个）
CGO_ENABLED=1 可直接交叉编译的组合数：仅当前平台（1 个，除非安装交叉工具链）

=== 实验结束 ===
